<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"

    android:orientation="vertical"
    android:padding="8dp"
    tools:context="tk.developeramit.socialmediaapi.MainActivity">

    <LinearLayout
        android:id="@+id/profile_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/profile_picture"
            android:layout_width="96dp"
            android:layout_height="110dp"
            android:scaleType="center"
            android:src="@drawable/icons8google50" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/profile_name"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:padding="4dp"
                android:text="Full Name od User"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_email"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="email address of user"
                android:textSize="14sp" />

            <Button
                android:id="@+id/profile_logout"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:text="Logout Account"
                android:onClick="onClickSignOut"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/primary_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="12dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="8dp"
            android:background="#ffffff"
            android:hint="@string/email_hint"
            android:imeActionLabel="Next"
            android:inputType="textEmailAddress"
            android:padding="8dp" />


        <EditText
            android:id="@+id/passowrd"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="24dp"
            android:background="#ffffff"
            android:hint="@string/password_hint"
            android:imeActionLabel="Next"
            android:inputType="textPassword"
            android:padding="8dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#eeeeee"
            android:onClick="onLogin"
            android:text="@string/Login_button"
            android:textColor="@color/backgroundColor" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:inputType="textCapSentences"
            android:onClick="onClickSignup"
            android:text="@string/signup_button"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="onClickSignInGoogle"
            />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <ProgressBar
            android:id="@+id/login_progress"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPrimaryDark"
            android:indeterminateTintMode="src_atop" />

    </RelativeLayout>
</FrameLayout>